--- a/Framwork/test-output/old/Default suite/groups.html
+++ b/Framwork/test-output/old/Default suite/groups.html
@@ -1,5 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Arts</td><td>DemoAtt.hrSec()[pri:1, instance:businessComponents.DemoAtt@51dcb805]<br/>DemoAtt.std()[pri:0, instance:businessComponents.DemoAtt@51dcb805]<br/>DemoAtt.pg()[pri:3, instance:businessComponents.DemoAtt@51dcb805]<br/>DemoAtt.ug()[pri:2, instance:businessComponents.DemoAtt@51dcb805]<br/></td></tr>
-<tr><td>DR</td><td>DemoAtt.dr()[pri:5, instance:businessComponents.DemoAtt@51dcb805]<br/></td></tr>
-<tr><td>MD</td><td>DemoAtt.pHD()[pri:4, instance:businessComponents.DemoAtt@51dcb805]<br/></td></tr>
-</table>
+<h2>Groups used for this test run</h2>
