--- a/Framwork/test-output/old/Default suite/classes.html
+++ b/Framwork/test-output/old/Default suite/classes.html
@@ -4,45 +4,15 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>businessComponents.DemoAtt</td>
+<td>objectRepo.DuClass</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>std</td>
-<td>Arts </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ug</td>
-<td>Arts </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>exceldata</td>
+<td>setUPExecuter</td>
 <td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>pg</td>
-<td>Arts </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>hrSec</td>
-<td>Arts </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>pHD</td>
-<td>MD </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>dr</td>
-<td>DR </td>
-</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
